Fix layout issues with code blocks

--- a/frontend/src/assets/content.css
+++ b/frontend/src/assets/content.css
@@ -128,17 +128,6 @@ SOFTWARE. */
   width: 100%;
 }
 
-/* Typography */
-.gnotus-content code,
-.gnotus-content samp {
-  color: var(--color-accent-content);
-  background-color: var(--color-base-300);
-  border-radius: var(--border-radius);
-  display: inline-block;
-  margin: 0 0.1rem;
-  padding: 0 0.3rem;
-}
-
 .gnotus-content details {
   margin: 1.3rem 0;
 }
@@ -227,16 +216,34 @@ SOFTWARE. */
 
 .gnotus-content pre {
   margin: 1rem 0;
-  max-width: var(--width-card-wide);
-  padding: 1rem 0;
+  padding: 1rem;
+  background-color: var(--color-base-200);
+  color: var(--color-base-content);
+  white-space: pre-wrap;
+  overflow-x: auto;
+  border: 1px solid var(--color-base-300);
+  border-radius: var(--border-radius);
+}
+
+.gnotus-content code,
+.gnotus-content samp {
+  color: var(--color-accent-content);
+  background-color: var(--color-base-300);
+  border-radius: var(--border-radius);
+  display: inline-block;
+  margin: 0 0.1rem;
+  padding: 0 0.3rem;
 }
 
 .gnotus-content pre code,
 .gnotus-content pre samp {
   display: block;
-  max-width: var(--width-card-wide);
-  padding: 0.5rem 2rem;
   white-space: pre-wrap;
+  text-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  border: none;
 }
 
 .gnotus-content small {
